--- a/openacademy/views/openacademy.xml
+++ b/openacademy/views/openacademy.xml
@@ -1,27 +1,69 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
-    <!-- window action --> <!-- The following tag is an action definition for a "window action" that is an action opening a view or a set of views -->
 
-  <record model="ir.actions.act_window" id="course_list_action">
-   <field name="name">Courses</field>
-   <field name="res_model">openacademy.course</field>
-   <field name="view_type">form</field>
-   <field name="view_mode">tree,form</field>
-   <field name="help" type="html">
-    <p class="oe_view_nocontent_create">Create the first course </p>
-    </field>
- </record>
+    <!-- explicit list view definition -->
+    <record model="ir.ui.view" id="course_form_view">
+        <field name="name">course.form</field>
+        <field name="model">openacademy.course</field>
+        <field name="arch" type="xml">
+            <form string="Course Form">
+                <sheet>
+                    <group>
+                        <field name="name"/>
+                    </group>
+                </sheet>
+                <notebook>
+                  <page string="Description">
+                    <field name="description"/>
+                   </page>
+                   <page string="About">
+                    This is an example of notebooks
+                    </page>
+                 </notebook>
+            </form>
+        </field>
+    </record>
+ <record model="ir.ui.view" id="course_list_view">
+         <field name="name">course.list</field>
+         <field name="model">openacademy.course</field>
+         <field name="arch" type="xml">
+             <tree string="Course Tree">
+                    <field name="name" string="Name Tree"/>
+                    <field name="description"/>
+             </tree>
+         </field>
+  </record>
+
+  <record model="ir.ui.view" id="course_search_view">
+      <field name="name">course.search</field>
+      <field name="model">openacademy.course</field>
+      <field name="arch" type="xml">
+          <search string="Course Search">
+              <field name="name" string="Name Search"/>
+              <field name="description"/>
+          </search>
+      </field>
+  </record>
+
+                               <!-- window action -->
+    <!--The following tag is an action definition for a "window action",that is an action opening a view or a set of views-->
+    <record model="ir.actions.act_window" id="course_list_action">
+        <field name="name">Courses</field>
+        <field name="res_model">openacademy.course</field>
+        <field name="view_type">form</field>
+        <field name="view_mode">tree,form</field>
+        <field name="help" type="html">
+            <p class="oe_view_nocontent_create">Create the first course
+            </p>
+        </field>
+    </record>
 
     <!-- top level menu: no parent -->
-    <menuitem name="Open Academy" id="main_openacademy_menu"/>
-
+    <menuitem id="main_openacademy_menu" name="Open Academy"/>
     <!-- A first level in the left side menu is needed before using action= attribute -->
-    <menuitem name="Open Academy" id="openacademy_menu" parent="main_openacademy_menu"/>
-
-<!-- the following menuitem should appear *after* its parent openacademy_menu and *after* its action course_list_action -->
-    <menuitem name="Courses" id="courses_menu"  parent="openacademy_menu" action="course_list_action"/>
-
-<!-- Full id location: action="openacademy.course_list_action"  It is not required when it is the same module -->
-
+    <menuitem id="openacademy_menu" name="Open Academy"   parent="main_openacademy_menu"/>
+    <!-- the following menuitem should appear *after* its parent openacademy_menu and *after* its action course_list_action -->
+    <menuitem id="courses_menu" name="Courses" parent="openacademy_menu" action="course_list_action"/>
+    <!-- Full id location: action="openacademy.course_list_action"  It is not required when it is the same module -->
 
 </odoo>
